--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<p>WILLIAM USRY</p>
+<!DOCTYPE html>
+<html>
+    <header>This is My Coding Journey</header>
+    <main>
+    <article>
+        <h1>This is My Coding Story</h1>
+        <p>My coding journey started several years ago. I solved a simple computer issue by searching google and I had been asked if I had an interest in coding.</p>
+        <p>After some convincing I began working with the beggining lessons in CodeAcademy and working with small projects with my friends that have web dev experience</p>
+        <p>Even with all my friends help I kept getting stuck on loops &amp; functions &amp; how they worked together. I became pretty discouraged and began drifting away from web development</p>
+        <p>I applied and was accepted to LaunchCode and now I am well on my way to becoming an all start developer!</p>
+    </article>
+</main>
+    <footer>
+        <p>Posted by: William Usry</p>
+        <p>email: <a href="mailto:connorusry@gmail.com">
+            connorusry@gmail.com</a>.
+        </p>
+        <img src=images/connor.jpg alt="Thats me" height="450" width="450" rotate="270">
+        </footer>
+</html>
